--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "计算矩形面积和周长",
   "main": "Gruntfile.js",
   "devDependencies": {
-    "grunt": "^1.0.3",
+    "grunt": ">=0.4.5",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
@@ -14,7 +14,7 @@
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-eslint": "^21.0.0",
     "grunt-htmlhint": "^0.9.13",
-    "grunt-mocha": "^1.2.0",
+    "grunt-mocha": "^0.4.12",
     "grunt-usemin": "^3.1.1"
   },
   "scripts": {
