--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rect",
   "version": "1.0.0",
-  "description": "计算矩形面积和周长",
+  "description": "计算矩形面积周长",
   "main": "Gruntfile.js",
   "devDependencies": {
     "grunt": ">=0.4.5",
@@ -18,7 +18,7 @@
     "grunt-usemin": "^3.1.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "grunt lint && grunt unitTest"
   },
   "repository": {
     "type": "git",
